# agent-protocol-harness

./: .mcp.json  AGENT_PROTOCOL_HARNESS_IMPROVEMENT_PLAN.md  CLAUDE.md  IMPLEMENTATION_CONFIDENCE_REPORT.md  MCP_IMPROVEMENT_PLAN.md  README.md  WORKFLOW.md  auth-contracts.yaml  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.serena/: project.yml
plans/: MILESTONE_1_WORKSPACE_MONITOR.md  MILESTONE_2_TASK_ANALYZER.md  MILESTONE_3_MODELS.md  MILESTONE_4_MCP_SERVER.md  MILESTONE_5_PASSIVE_CONTEXT.md
src/agent_harness/: __init__.py  claude_client.py  cli.py  executor.py  init.py  isolator.py  mcp_server.py  models.py  orchestrator.py  parser.py  passive_context.py  persistence.py  reconciler.py  signals.py  task_analyzer.py  test_harness.py  verification.py  workspace_monitor.py
tests/: test_passive_context.py
